--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "components/openmv_apriltag"]
 	path = components/openmv_apriltag
 	url = https://github.com/Windesheim-Willy/openmv_apriltag
+[submodule "components/sonar"]
+	path = components/sonar
+	url = https://github.com/Windesheim-Willy/sonar
